Fixed overflow issues with content by adding overflow: hidden to container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ section {
     background-color: #000;
     color: darkgray;
     border-top: 1px solid #0AF505;
+    overflow: hidden;
 }
 
 .social-links li i {
@@ -103,6 +104,7 @@ section {
 /*---- Home Page ----*/
 .section-content {
     border-top: 1px solid #0AF505;
+    overflow: hidden;
 }
 
 .section-content h1 {
